[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Bunker/CoverArea.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 2, 4 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 6, 4, 8 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.454902, 0.552941, 1, 0.298039 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.1, 5, 0.1 )

[node name="CoverArea" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
layers = 2
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="SafetyRod" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -2 )
layers = 2
mesh = SubResource( 4 )

[node name="SafetyRod2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 2 )
layers = 2
mesh = SubResource( 4 )
